--- a/TestSite/appsettings.json
+++ b/TestSite/appsettings.json
@@ -1,10 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  "Project": {
+    "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Database=TestCompany; Persist Security Info=false; User ID='sa'; Password='sa'; MulripleActiveResultSets=True; Trusted_Connection=False;",
+    "CompanyName": "My Supercompany",
+    "CompanyPhone": "+1 (111) 111-11-11",
+    "CompanyPhoneShort": "+11111111111",
+    "CompanyEmail": "contact@mycompany.com"
+  }
 }
